not_in_use/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: registry
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Docker Registry
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: docker.png
    gethomepage.dev/name: Docker Registry
spec:
  ingressClassName: nginx
  rules:
    - host: registry.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 5000
